--- a/src/manifest.json
+++ b/src/manifest.json
@@ -32,8 +32,8 @@
     "commands": {
         "_execute_action": {
             "suggested_key": {
-                "default": "Ctrl+B",
-                "mac": "Command+B"
+                "default": "Ctrl+Shift+K",
+                "mac": "Command+Shift+K"
             }
         }
     }
