--- a/package.json
+++ b/package.json
@@ -1,49 +1,59 @@
 {
-    "name": "clip2tana",
-    "description": "Clips current webpage and selection to tana-paste format",
-    "version": "0.0.2",
-    "homepage": "https://github.com/verveguy/clip2tana",
-    "author": "Brett Adam",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/verveguy/clip2tana"
-    },
-    "scripts": {
-        "build": "rimraf dist && node esbuild.config.mjs",
-        "watch": "watch 'yarn build' src"
-    },
-    "eslintIgnore": [
-        "test/**/*"
+  "name": "clip2tana",
+  "displayName": "Clip2tana",
+  "version": "0.0.1",
+  "description": "Clips current webpage and selection to tana-paste format",
+  "author": "Brett Adam",
+  "scripts": {
+    "dev": "plasmo dev",
+    "build": "plasmo build",
+    "package": "plasmo package"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fastify/deepmerge": "^2.0.0",
+    "@mui/icons-material": "^5.14.14",
+    "@mui/material": "^5.14.14",
+    "@plasmohq/messaging": "^0.6.2",
+    "@plasmohq/storage": "^1.11.0",
+    "plasmo": "0.88.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "turndown": "^7.1.1"
+  },
+  "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "4.1.1",
+    "@types/chrome": "0.0.258",
+    "@types/node": "20.11.5",
+    "@types/react": "18.2.48",
+    "@types/react-dom": "18.2.18",
+    "prettier": "3.2.4",
+    "typescript": "5.3.3"
+  },
+  "manifest": {
+    "host_permissions": [
+      "https://*/*"
     ],
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
+    "permissions": [
+      "storage",
+      "scripting",
+      "activeTab",
+      "clipboardRead",
+      "clipboardWrite"
+    ],
+    "commands": {
+      "clip2tana": {
+        "description": "Clip current tab",
+        "suggested_key": {
+          "default": "Ctrl+Shift+P",
+          "mac": "Command+Shift+P"
+        }
+      }
     },
-    "dependencies": {
-        "@emotion/react": "^11.11.1",
-        "@emotion/styled": "^11.11.0",
-        "@mui/icons-material": "^5.14.14",
-        "@mui/material": "^5.14.14",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "turndown": "^7.1.1"
-    },
-    "devDependencies": {
-        "@types/chrome": "^0.0.224",
-        "@types/react-dom": "^18.2.14",
-        "babel-plugin-styled-components": "^2.0.7",
-        "esbuild": "^0.18.6",
-        "esbuild-plugin-copy": "^2.1.1",
-        "rimraf": "^5.0.5",
-        "ts-loader": "^9.4.2",
-        "watch": "^1.0.2"
+    "options_ui": {
+      "page": "options.html",
+      "open_in_tab": false
     }
+  }
 }
