Let's try sticking with activeTab permissions only

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "permissions": [
       "storage",
       "scripting",
-      "tabs",
+      "activeTab",
       "clipboardRead",
       "clipboardWrite"
     ],
